@@ -26,6 +26,8 @@ version 2.6.0 (??/??/2009):
 	* Fix crash on connection with recent gstreamer0.10-plugins-bad.
 	* Don't create a new conversation window for incoming messages of
 	  type 'headline'.
+	* The Ad-Hoc commands associated with our server are now always shown at
+	  login.
 
 	IRC:
 	* Correctly handle WHOIS for users who are joined to a large number of
